auth with google

--- a/src/components/menu-items/menu-item.styles.scss
+++ b/src/components/menu-items/menu-item.styles.scss
@@ -45,7 +45,7 @@
     padding: 0 25px;
     display: flex;
     flex-direction: column;
-    align-items: centre;
+    align-items: center;
     justify-content: center;
     border: 1px solid black;
     background-color: white;
